# cv

./: .gitignore  Edison_Florez_CV.tex  LICENSE  README.md  cv.md  html_format_for_README.txt  main.md  main.tex  publication_html_format.txt
.github/workflows/: build.yml  build_and_publish_latex.yml
cv/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  schemas.py  validators.py
cv/data/: cv_data.yaml
cv/tests/: test_validation.py
figs/: 3-5stars.xcf  4-8stars.xcf  EdisonFlorez_1035419798.ps  pie_charts.xlsx  programming.xcf  skills.ps  skills.xcf
img/: 4stars.xcf  5stars.xcf  programming1.xcf  qr_google_sites.eps
sections/: academic.tex  awards.tex  closing.tex  contact_info.tex  footer.tex  github_qr.tex  header.tex  leadership.tex  open_source.tex  profile.tex  publications.tex  references.tex  reviewer.tex  skills.tex  supervision.tex  title.tex  work.tex
